--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ colorama==0.4.4
 dnspython==2.2.1
 email-validator==1.2.0
 Flask==2.1.1
+Flask-Admin==1.6.0
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.0
 Flask-SQLAlchemy==2.5.1
